Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag
   14                | STRUCT error

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec LB error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC

   27 StmtList: Stmt StmtList
   28         | %empty

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | IF LP Exp RP Stmt
   33     | IF LP Exp RP Stmt ELSE Stmt
   34     | WHILE LP Exp RP Stmt
   35     | RETURN error SEMI
   36     | RETURN Exp error
   37     | Exp error

   38 DefList: Def DefList
   39        | %empty

   40 Def: Specifier DecList SEMI
   41    | Specifier error

   42 DecList: Dec
   43        | Dec COMMA DecList

   44 Dec: VarDec
   45    | VarDec ASSIGNOP Exp

   46 Exp: Exp ASSIGNOP Exp
   47    | Exp AND Exp
   48    | Exp OR Exp
   49    | Exp RELOP Exp
   50    | Exp PLUS Exp
   51    | Exp MINUS Exp
   52    | Exp STAR Exp
   53    | Exp DIV Exp
   54    | LP Exp RP
   55    | MINUS Exp
   56    | NOT Exp
   57    | ID LP Args RP
   58    | ID LP RP
   59    | Exp LB Exp RB
   60    | Exp DOT ID
   61    | ID
   62    | INT
   63    | FLOAT
   64    | error RP
   65    | error RB

   66 Args: Exp COMMA Args
   67     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 14 20 35 36 37 41 64 65
INT (258) 19 62
FLOAT (259) 63
ID (260) 15 17 18 21 22 57 58 60 61
SEMI (261) 4 5 29 31 35 40
COMMA (262) 9 23 43 66
ASSIGNOP (263) 45 46
AND (264) 47
OR (265) 48
RELOP (266) 49
PLUS (267) 50
MINUS (268) 51 55
STAR (269) 52
DIV (270) 53
NOT (271) 56
DOT (272) 60
TYPE (273) 10
LP (274) 21 22 32 33 34 54 57 58
RP (275) 21 22 32 33 34 54 57 58 64
LB (276) 19 20 59
RB (277) 19 20 59 65
LC (278) 12 26
RC (279) 12 26
STRUCT (280) 12 13 14
RETURN (281) 31 35 36
IF (282) 32 33
LOWER_THAN_ELSE (283)
ELSE (284) 33
WHILE (285) 34


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7, on right: 2
ExtDecList (35)
    on left: 8 9, on right: 4 9
Specifier (36)
    on left: 10 11, on right: 4 5 6 7 25 40 41
StructSpecifier (37)
    on left: 12 13 14, on right: 11
OptTag (38)
    on left: 15 16, on right: 12
Tag (39)
    on left: 17, on right: 13
VarDec (40)
    on left: 18 19 20, on right: 8 9 19 20 25 44 45
FunDec (41)
    on left: 21 22, on right: 6
VarList (42)
    on left: 23 24, on right: 21 23
ParamDec (43)
    on left: 25, on right: 23 24
CompSt (44)
    on left: 26, on right: 6 30
StmtList (45)
    on left: 27 28, on right: 26 27
Stmt (46)
    on left: 29 30 31 32 33 34 35 36 37, on right: 27 32 33 34
DefList (47)
    on left: 38 39, on right: 12 26 38
Def (48)
    on left: 40 41, on right: 38
DecList (49)
    on left: 42 43, on right: 40 43
Dec (50)
    on left: 44 45, on right: 42 43
Exp (51)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
    64 65, on right: 29 31 32 33 34 36 37 45 46 47 48 49 50 51 52 53
    54 55 56 59 60 66 67
Args (52)
    on left: 66 67, on right: 57 66


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag
   14                | STRUCT . error

    error  shift, and go to state 8
    ID     shift, and go to state 9

    LC  reduce using rule 16 (OptTag)

    OptTag  go to state 10
    Tag     go to state 11


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 12


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error

    error  shift, and go to state 14
    ID     shift, and go to state 15
    SEMI   shift, and go to state 16

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   14 StructSpecifier: STRUCT error .

    $default  reduce using rule 14 (StructSpecifier)


State 9

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 10

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 20


State 11

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 12

    0 $accept: Program $end .

    $default  accept


State 13

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 14

    7 ExtDef: Specifier error .

    $default  reduce using rule 7 (ExtDef)


State 15

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP

    LP  shift, and go to state 21

    $default  reduce using rule 18 (VarDec)


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 22


State 18

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 8 (ExtDecList)


State 19

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 25

    CompSt  go to state 26


State 20

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 28
    Def              go to state 29


State 21

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 30
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    VarList          go to state 32
    ParamDec         go to state 33


State 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 23

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 34

    ExtDecList  go to state 35
    VarDec      go to state 18


State 24

   19 VarDec: VarDec LB . INT RB
   20       | VarDec LB . error RB

    error  shift, and go to state 36
    INT    shift, and go to state 37


State 25

   26 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 38
    Def              go to state 29


State 26

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 27

   40 Def: Specifier . DecList SEMI
   41    | Specifier . error

    error  shift, and go to state 39
    ID     shift, and go to state 34

    VarDec   go to state 40
    DecList  go to state 41
    Dec      go to state 42


State 28

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 43


State 29

   38 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 44
    Def              go to state 29


State 30

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 31

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 34

    VarDec  go to state 45


State 32

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 46


State 33

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 47

    $default  reduce using rule 24 (VarList)


State 34

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 35

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 36

   20 VarDec: VarDec LB error . RB

    RB  shift, and go to state 48


State 37

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 49


State 38

   26 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 50
    INT     shift, and go to state 51
    FLOAT   shift, and go to state 52
    ID      shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 25
    RETURN  shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59

    RC  reduce using rule 28 (StmtList)

    CompSt    go to state 60
    StmtList  go to state 61
    Stmt      go to state 62
    Exp       go to state 63


State 39

   41 Def: Specifier error .

    $default  reduce using rule 41 (Def)


State 40

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   44 Dec: VarDec .
   45    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 64
    LB        shift, and go to state 24

    $default  reduce using rule 44 (Dec)


State 41

   40 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 65


State 42

   42 DecList: Dec .
   43        | Dec . COMMA DecList

    COMMA  shift, and go to state 66

    $default  reduce using rule 42 (DecList)


State 43

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 44

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


State 45

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 25 (ParamDec)


State 46

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 47

   23 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    VarList          go to state 67
    ParamDec         go to state 33


State 48

   20 VarDec: VarDec LB error RB .

    $default  reduce using rule 20 (VarDec)


State 49

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 50

   64 Exp: error . RP
   65    | error . RB

    RP  shift, and go to state 68
    RB  shift, and go to state 69


State 51

   62 Exp: INT .

    $default  reduce using rule 62 (Exp)


State 52

   63 Exp: FLOAT .

    $default  reduce using rule 63 (Exp)


State 53

   57 Exp: ID . LP Args RP
   58    | ID . LP RP
   61    | ID .

    LP  shift, and go to state 70

    $default  reduce using rule 61 (Exp)


State 54

   55 Exp: MINUS . Exp

    error  shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 71


State 55

   56 Exp: NOT . Exp

    error  shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 72


State 56

   54 Exp: LP . Exp RP

    error  shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 73


State 57

   31 Stmt: RETURN . Exp SEMI
   35     | RETURN . error SEMI
   36     | RETURN . Exp error

    error  shift, and go to state 74
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 75


State 58

   32 Stmt: IF . LP Exp RP Stmt
   33     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 76


State 59

   34 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 77


State 60

   30 Stmt: CompSt .

    $default  reduce using rule 30 (Stmt)


State 61

   26 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 78


State 62

   27 StmtList: Stmt . StmtList

    error   shift, and go to state 50
    INT     shift, and go to state 51
    FLOAT   shift, and go to state 52
    ID      shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 25
    RETURN  shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59

    RC  reduce using rule 28 (StmtList)

    CompSt    go to state 60
    StmtList  go to state 79
    Stmt      go to state 62
    Exp       go to state 63


State 63

   29 Stmt: Exp . SEMI
   37     | Exp . error
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    error     shift, and go to state 80
    SEMI      shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    AND       shift, and go to state 83
    OR        shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91


State 64

   45 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 92


State 65

   40 Def: Specifier DecList SEMI .

    $default  reduce using rule 40 (Def)


State 66

   43 DecList: Dec COMMA . DecList

    ID  shift, and go to state 34

    VarDec   go to state 40
    DecList  go to state 93
    Dec      go to state 42


State 67

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


State 68

   64 Exp: error RP .

    $default  reduce using rule 64 (Exp)


State 69

   65 Exp: error RB .

    $default  reduce using rule 65 (Exp)


State 70

   57 Exp: ID LP . Args RP
   58    | ID LP . RP

    error  shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    RP     shift, and go to state 94

    Exp   go to state 95
    Args  go to state 96


State 71

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   55    | MINUS Exp .
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    STAR  shift, and go to state 88
    DIV   shift, and go to state 89
    DOT   shift, and go to state 90
    LB    shift, and go to state 91

    $default  reduce using rule 55 (Exp)


State 72

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   56    | NOT Exp .
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    DOT  shift, and go to state 90
    LB   shift, and go to state 91

    $default  reduce using rule 56 (Exp)


State 73

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   54    | LP Exp . RP
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 82
    AND       shift, and go to state 83
    OR        shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    DOT       shift, and go to state 90
    RP        shift, and go to state 97
    LB        shift, and go to state 91


State 74

   35 Stmt: RETURN error . SEMI
   64 Exp: error . RP
   65    | error . RB

    SEMI  shift, and go to state 98
    RP    shift, and go to state 68
    RB    shift, and go to state 69


State 75

   31 Stmt: RETURN Exp . SEMI
   36     | RETURN Exp . error
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    error     shift, and go to state 99
    SEMI      shift, and go to state 100
    ASSIGNOP  shift, and go to state 82
    AND       shift, and go to state 83
    OR        shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91


State 76

   32 Stmt: IF LP . Exp RP Stmt
   33     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 101


State 77

   34 Stmt: WHILE LP . Exp RP Stmt

    error  shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 102


State 78

   26 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 26 (CompSt)


State 79

   27 StmtList: Stmt StmtList .

    $default  reduce using rule 27 (StmtList)


State 80

   37 Stmt: Exp error .

    $default  reduce using rule 37 (Stmt)


State 81

   29 Stmt: Exp SEMI .

    $default  reduce using rule 29 (Stmt)


State 82

   46 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 103


State 83

   47 Exp: Exp AND . Exp

    error  shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 104


State 84

   48 Exp: Exp OR . Exp

    error  shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 105


State 85

   49 Exp: Exp RELOP . Exp

    error  shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 106


State 86

   50 Exp: Exp PLUS . Exp

    error  shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 107


State 87

   51 Exp: Exp MINUS . Exp

    error  shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 108


State 88

   52 Exp: Exp STAR . Exp

    error  shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 109


State 89

   53 Exp: Exp DIV . Exp

    error  shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 110


State 90

   60 Exp: Exp DOT . ID

    ID  shift, and go to state 111


State 91

   59 Exp: Exp LB . Exp RB

    error  shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 112


State 92
